# 27_d

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  QA.md  README.md  config.yaml  docker-compose.yml  min_compute.yml  miner.config.example.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_containerized.sh
.github/workflows/: allure-pytest.yml  pre-commit.yml
compute/: __init__.py  axon.py  protocol.py
compute/pubsub/: __init__.py  auth.py  client.py  exceptions.py  message_factory.py  message_types.py  validator_gateway_client.py  validator_pubsub.py
compute/utils/: exceptions.py  parser.py  version.py
compute/wandb/: wandb.py
docs/: nodexo_ascii_banner.md  nodexo_ascii_banner.txt  sn27_ascii.md  sn27_bold_ascii.md  ssh_welcome_msg.md
neurons/: miner.py  miner_containerless.py  register_api.py  validator.py
neurons/Miner/: allocate.py  container.py  container_lite.py
neurons/Validator/: health_check.py  health_check_server.py  miner_script_m_merkletree.py  pog.py
neurons/Validator/database/: allocate.py  pog.py
scripts/: install-dev.sh  validate_miner_ports.py
scripts/installation_script/: README.md  compute_subnet_installer.sh  sn27_installer.sh
tests/: test_health_check.py  test_health_check_server.py  test_health_check_validator.py  test_miner_container.py  test_port_checker.py  test_port_opening.py  test_pubsub_message_factory.py  test_rsa_encryption.py  test_validator_health_check_flow.py
tmp/: dockerfile
